Loader Alignment Fixed

--- a/css/log001Stylesheet.css
+++ b/css/log001Stylesheet.css
@@ -7,39 +7,20 @@
   }
 }
 
-.loaderoverlay {
-  height: 0%;
-  width: 100%;
-  position: fixed;
-  z-index: 600;
-  top: 0;
-  left: 0;
-  background-color: #1f1f1f;
-  background-repeat: repeat;
-  overflow-y: hidden;
-  transition: 0.5s;
-}
-.loaderoverlay-content {
-    position: relative;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-}
-
 .loader {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   top: 50%;
   left: 50%;
-  margin-top: -25px;
-  margin-left: -25px;
+  margin-top: -50px;
+  margin-left: -50px;
   position: absolute;
-  z-index: 700;
+  z-index: 20;
+
 }
 
 .object {
-  background: #ddd;
+  background: #404040;
   width: 10px;
   height: 10px;
   position: absolute;
@@ -54,43 +35,35 @@
   margin-left: -25px;
   animation: loader 675ms ease-in-out 0s infinite alternate;
 }
-
 #obj2 {
   margin-top: -25px;
   animation: loader 675ms ease-in-out 75ms infinite alternate;
 }
-
 #obj3 {
   margin-top: -25px;
   margin-left: 15px;
   animation: loader 675ms ease-in-out 150ms infinite;
 }
-
 #obj4 {
   margin-left: -25px;
   animation: loader 675ms ease-in-out 225ms infinite;
 }
-
 #obj5 {
   animation: loader 675ms ease-in-out 300ms infinite;
 }
-
 #obj6 {
   margin-left: 15px;
   animation: loader 675ms ease-in-out 375ms infinite;
 }
-
 #obj7 {
   margin-top: 15px;
   margin-left: -25px;
   animation: loader 675ms ease-in-out 450ms infinite;
 }
-
 #obj8 {
   margin-top: 15px;
   animation: loader 675ms ease-in-out 525ms infinite;
 }
-
 #obj9 {
   margin-top: 15px;
   margin-left: 15px;
